--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Follow: http://www.twitter.com/themehats
 <!-- BEGIN HEAD -->
 <head>
   <meta charset="utf-8"/>
-  <title>JANGO | Ultimate Multipurpose Bootstrap HTML Theme - Onepage Version 5</title>
+  <title>小时光 - 每个生活点滴都值得被铭记</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
